# ESP-Website

./: .dockerignore  .env  .espsettings  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .project  .replit  .travis.yml  =4.9  BOOTSTRAP5_MIGRATION_AUDIT.md  CODE_OF_CONDUCT.md  DESIGN.md  Dockerfile  Feature: Real-Time Logistics & Enrollment Analytics Dashboard  LICENSE  Makefile  README.md  README.☆  README1.md  SECURITY.md  TAGDICT_CONSTRAINT_CHANGES.md  Vagrantfile  bootstrap_impact.txt  bootstrap_refs.txt  branch_list.txt  build-jsx.js  check.py  clean_boms_safe.ps1  codecov.yml  controllers_analysis.txt  db.sqlite3  df  diff.patch  djhtml_diff_utf8.txt  djhtml_report.md  docker-compose.yml  docker-entrypoint.sh  docker_logs.txt  (+50 more)
esp/: #settings.py#  .coverage  .watchmanconfig  AUTHORS  INSTALL  README  admintoolsdash.py  admintoolsdash_tests.py  admintoolsmenu.py  check_programs.py  cmdline_auth.py  conftest.py  db.sqlite3  db_schema_done.py  db_schema_notify.py  dbmail_cron.py  debathena-archive.asc  delete_old_sessions.sh  esp_setup.py  fabfile.py  fetch_omars_cron.py  filehandler.py  find_and_replace_hidden.sh  flush-cache.py  install_script.py  lint_561.sh  lint_out.txt  local_settings_override.py  make_virtualenv.sh  makemigrations_error.txt  manage.py  merge_output.txt  migrate.err  modpython.py  moira-sync.py  packages.txt  packages_base.txt  packages_base_manual_install.sh  packages_dev_manual_install.sh  packages_prod.txt  (+20 more)
esp/apache_settings/: httpd.conf_windows  python.conf  python.conf.aseering_laptop  wsgi_auth.py
esp/cal/: models.py  (+3 more)
(+4175 files in other folders)
